--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     </div>
     <div class="grid_12">
       <h2>PLAY GAME</h2>
+      <p>Mouse input not working? Try using the enter key or play <a href="https://build.cloud.unity3d.com/share/ZkEfEe0I7Z/webgl/">this version</a> instead.</p>
       <div class="template">
         <p class="header"><span>Unity WebGL Player | </span>Flip Exchange</p>
         <div class="template-wrap clear">
