Added windows build download

--- a/index.html
+++ b/index.html
@@ -43,8 +43,11 @@
       <form method="get" action="assets/flipexchange-flip-exchange-default-mac-desktop-universal-18-Default_Mac_desktop_Universal.zip">
         <button type="submit" class="btn btn-1 btn-1a">Download for OSX users (42.8 MB)</button>
       </form>
-
+      <form method="get" action="assets/flipexchange-flip-exchange-windows-desktop-32-bit-1-Windows_desktop_32-bit.zip">
+        <button type="submit" class="btn btn-1 btn-1a">Download for Windows users (63.0 MB)</button>
+      </form>
       <h2>PLAY GAME</h2>
+      <p>Experiencing issues playing the game? Try <a href="https://build.cloud.unity3d.com/share/ZkEfEe0I7Z/webgl/">this version</a> instead.</p>
       <div class="template">
         <p class="header"><span>Unity WebGL Player | </span>Flip Exchange</p>
         <div class="template-wrap clear">
