Call out final presentation more

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         <li>Resolution: Best played in 1024x768</li>
         <li>Controls: Keyboard / Mouse</li>
         <li>Average Runtime: 5-10 minutes</li>
-        <li>Developer Notes: <a href="https://docs.google.com/presentation/d/1HlnYu2iCd2Aprt5jBiwk5xsLzqwSaGKVC8hRTYZEMrE/edit?usp=sharing">Final Presentation</a></li>
         <li>Created using Unity 5.3.4.f1</li>
       </ul>
       <p>Links: <a href="https://github.com/flipexchange/flipexchange">Github</a> | <a href="https://github.com/flipexchange/builds/tree/gh-pages">Previous Builds</a></p>
+      <p>Learn about how we developed the story and gameplay in our <a href="https://docs.google.com/presentation/d/1HlnYu2iCd2Aprt5jBiwk5xsLzqwSaGKVC8hRTYZEMrE/edit?usp=sharing">Final Presentation</a>.</p>
     </div>
     <div class="grid_5">
       <figure><img src="imgs/embers.gif"></figure>
