--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         <li>Created using Unity 5.3.4.f1</li>
       </ul>
       <p>Links: <a href="https://github.com/flipexchange/flipexchange">Github</a> | <a href="https://github.com/flipexchange/builds/tree/gh-pages">Previous Builds</a></p>
+      <h2>STORY</h2>
+      <p>To stop the constant bickering of two opposing nations, Lavaland and Iceworld, a wizard has merged two of their fiercest warriors together. Now, two opposites must learn to work together to get back to the wizard and separate themselves.</p>
       <p>Learn about how we developed the story and gameplay in our <a href="https://docs.google.com/presentation/d/1HlnYu2iCd2Aprt5jBiwk5xsLzqwSaGKVC8hRTYZEMrE/edit?usp=sharing">Final Presentation</a>.</p>
     </div>
     <div class="grid_5">
